# wiki

./: .gitignore  Makefile  README.md  docker-compose-local.yaml  docker-compose.yaml  package-lock.json  package.json  pyproject.toml
backend/: .env.example  requirements.txt
backend/wiki/: api.py  config.py  database.py  main.py  models.py
backend/wiki/admins/: router.py
backend/wiki/asset/: enums.py  model.py  repository.py  schema.py
backend/wiki/assets_storage/: deps.py  enums.py  router.py  utils.py
backend/wiki/auth/: core.py  deps.py  enums.py  routers.py  schemas.py  utils.py
backend/wiki/common/: enums.py  exceptions.py  models.py  schemas.py
backend/wiki/database/: core.py  deps.py  utils.py
backend/wiki/emile/: core.py  deps.py  schemas.py
backend/wiki/export_document/: router.py  utils.py
backend/wiki/organization/: enums.py  models.py  repository.py  router.py  routers.py  schemas.py
backend/wiki/permissions/: base.py  login.py  signup.py
backend/wiki/user/: models.py  repository.py  router.py  routers.py  schemas.py  utils.py
backend/wiki/user_group/: models.py  repository.py  router.py  schemas.py  utils.py
backend/wiki/wiki_api_client/: api_client_router.py  api_key_router.py  enums.py  models.py  repository.py  router.py  routers.py  schemas.py
backend/wiki/wiki_email/: core.py  deps.py  utils.py
backend/wiki/wiki_logging/: __init__.py  middleware.py  schemas.py
backend/wiki/wiki_storage/: config.py  deps.py  (+3 more)
deploy/dev/: docker-compose.yaml
docker/: Dockerfile.backend
docs/: swagger.yaml
docs/demo/: asset-manifest.json  index.html
frontend/: .env.example  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: Api.js  App.js  EventEmitter.js  ImageBlock.js  TestData.js  api.config.js  app.config.js
tests/database/: init_db.py
(+182 files in other folders)
